@@ -17,6 +17,8 @@ import java.util.random.RandomGeneratorFactory;
 import java.util.stream.Collectors;
 
 /**
+ * The main class of the game.
+ *
  * @author Maxence Espagnet (sciper: 372808)
  * @author Balthazar Baillat (sciper: 373420)
  */
@@ -69,11 +71,11 @@ public class Main extends Application {
         SimpleObjectProperty<String> textToDisplayP = new SimpleObjectProperty<>("");
         SimpleObjectProperty<List<String>> actionsP = new SimpleObjectProperty<>(List.of());
 
-        // Dynamic game state properties
+        // Dynamic game properties
         SimpleObjectProperty<GameState> gameStateO = new SimpleObjectProperty<>(initialGameState);
         ObservableValue<MessageBoard> messageBoardO = gameStateO.map(GameState::messageBoard);
         ObservableValue<GameState.Action> nextGameAction = gameStateO.map(GameState::nextAction);
-
+        // Dynamic game properties based on the game state
         ObservableValue<Tile> tileToPlaceO = gameStateO.map(GameState::tileToPlace);
         ObservableValue<TileDecks> decksO = gameStateO.map(GameState::tileDecks);
         ObservableValue<Integer> normalTilesSizeO = decksO.map(gameDecks -> gameDecks.normalTiles().size());
@@ -92,21 +94,25 @@ public class Main extends Application {
             Board board = currentGameState.board();
             if (nextAction == GameState.Action.OCCUPY_TILE) {
                 Set<Occupant> occupantsToDisplay = new HashSet<>(board.occupants());
+                // Also display the potential occupants of the last tile placed
                 occupantsToDisplay.addAll(currentGameState.lastTilePotentialOccupants());
-                return Set.copyOf(occupantsToDisplay);
+                return Collections.unmodifiableSet(occupantsToDisplay);
             }
             return board.occupants();
         }));
 
+        // Apply an action to the game state
         Consumer<String> applyAction = action -> {
             ActionEncoder.StateAction stateAction = ActionEncoder.decodeAndApply(gameStateO.get(), action);
             if (stateAction != null)
                 applyStateAction(stateAction, gameStateO, actionsP);
         };
 
+        // Apply a rotation to the tile to place
         Consumer<Rotation> applyRotation = rotation ->
                 tileToPlaceRotationP.set(tileToPlaceRotationP.get().add(rotation));
 
+        // Place a tile at a given position if possible
         Consumer<Pos> placeTileAtPos = pos -> {
             GameState state = gameStateO.get();
             if (state.tileToPlace() != null) {
@@ -123,9 +129,11 @@ public class Main extends Application {
             }
         };
 
+        // Place or remove an occupant on the board if possible
         Consumer<Occupant> selectOccupant = occupant -> {
             GameState gameState = gameStateO.get();
             switch (gameState.nextAction()) {
+                // Normal tile has been placed
                 case GameState.Action.OCCUPY_TILE  -> {
                     // Check if the player has clicked on a potential occupant and not one already on the board
                     if (!gameState.board().occupants().contains(occupant)) {
@@ -134,6 +142,7 @@ public class Main extends Application {
                         applyStateAction(stateAction, gameStateO, actionsP);
                     }
                 }
+                // Shaman tile has been placed
                 case RETAKE_PAWN -> {
                     ActionEncoder.StateAction stateAction =
                             ActionEncoder.withOccupantRemoved(gameStateO.get(), occupant);
@@ -171,6 +180,7 @@ public class Main extends Application {
 
     /**
      * Apply the state action to the game state and actions list.
+     *
      * @param stateAction the state action to apply
      * @param gameStateO the game state property
      * @param actionsP the actions list property
@@ -179,18 +189,19 @@ public class Main extends Application {
                              SimpleObjectProperty<GameState> gameStateO, SimpleObjectProperty<List<String>> actionsP) {
         List<String> actions = new ArrayList<>(actionsP.get());
         actions.add(stateAction.action());
-        actionsP.set(actions);
+        actionsP.set(Collections.unmodifiableList(actions));
         gameStateO.set(stateAction.gameState());
     }
 
     /**
      * Maps each player color to a player name if any.
+     *
      * @param playerNames the list of player names
      * @return the map of player colors to player names
      */
     private Map<PlayerColor, String> createPlayers(List<String> playerNames) {
         List<PlayerColor> playerColors = PlayerColor.ALL.subList(0, playerNames.size());
-        Map<PlayerColor, String> players = new HashMap<>();
+        Map<PlayerColor, String> players = new EnumMap<>(PlayerColor.class);
         for (int i = 0; i < playerNames.size(); ++i) {
             players.put(playerColors.get(i), playerNames.get(i));
         }
@@ -199,6 +210,7 @@ public class Main extends Application {
 
     /**
      * Creates the tile decks with a seed if any, or randomly picks one.
+     *
      * @param rawSeed the raw seed to use
      * @return the created tile decks
      */
@@ -210,6 +222,7 @@ public class Main extends Application {
             long seed = Long.parseUnsignedLong(rawSeed);
             shuffler = defaultRandomFactory.create(seed);
         } else {
+            // Generate a random seed
             shuffler = defaultRandomFactory.create();
         }
 
